# Cheetah-Software

./: CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/Controllers/: DummyStateEstimatorContainer.h
common/include/SimUtilities/: IMUTypes.h
common/src/Controllers/: DesiredStateCommand.cpp
config/: default-terrain.yaml  mc-mit-ctrl-user-parameters.yaml  simulator-defaults.yaml
cpp/: all_includes.hpp
lcm-types/: footstep_height_lcmt.lcm  gait_target_lcmt.lcm  phase_target_lcmt.lcm  rl_action_lcmt.lcm  rl_obs_t.lcm
python/: .WBC.py.swp  .raisim_control.py.swp  CMakeLists.txt  WBC.py  all_includes.hpp  binding_tests.py  bindings.cpp  cheetahctrl.cpp  raisim_control.py  raisim_control_adaptive_gait.py  tests.py  wbc.cpp
robot/: CMakeLists.txt
robot/include/rt/: rt_rc_interface.h
robot/src/: RaiSimBridge.cpp  RobotRunner.cpp
sim/: CMakeLists.txt
sim/include/: Graphics3D.h  SimControlPanel.h  Simulation.h  SimulationRunnerHeadless.h
sim/src/: GameController.cpp  Graphics3D.cpp  SimControlPanel.cpp  Simulation.cpp  SimulationRunnerHeadless.cpp  bindings.cpp  main.cpp
user/MIT_Controller/: CMakeLists.txt
user/MIT_Controller/Controllers/NeuralMPC/: CMakeLists.txt  NeuralMPCLocomotion.cpp  NeuralMPCLocomotion.h  NeuralMPC_interface.cpp  NeuralMPC_interface.h  NeuralRobotState.cpp  NeuralRobotState.h  NeuralSolverMPC.cpp  NeuralSolverMPC.h
user/MIT_Controller/Controllers/VisionMPC/: CMakeLists.txt  VisionMPCLocomotion.h
user/MIT_Controller/Controllers/WBC/WBIC/: CMakeLists.txt
user/MIT_Controller/Controllers/WBC_Ctrl/: CMakeLists.txt  WBC_Ctrl.cpp  WBC_Ctrl.hpp  cheetahctrl.cpp
user/MIT_Controller/Controllers/WBC_Ctrl/LocomotionCtrl/: LocomotionCtrl.cpp
user/MIT_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h
user/MIT_Controller/Controllers/convexMPC_pycheetah/: ConvexMPCLocomotion.cpp
user/MIT_Controller/FSM_States/: ControlFSM.cpp  ControlFSM.h  FSM_State.cpp  FSM_State.h  FSM_State_Locomotion.cpp  FSM_State_NeuralLocomotion.cpp  FSM_State_NeuralLocomotion.h  FSM_State_Passive.cpp  FSM_State_Python.cpp  FSM_State_Python.h  FSM_State_StandUp.cpp
